--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Boostfolio</title>
     <link href="css/bootstrap.css" rel="stylesheet"> 
-    <link href="css/bootstrap-overrides.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
@@ -445,7 +445,6 @@
     </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
-
     <script src="js/bootstrap.js"></script>
     <script src="js/script.js"></script>
   </body>
